--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.3",
   "main": "./dist/cli.js",
   "bin": {
-    "ai": "NODE_OPTIONS=--no-deprecation node ./dist/cli.js"
+    "ai": "./dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
