--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "tsc": "tsc",
     "relink": "npm run build && npm unlink ai && npm link ai",
-    "postinstall": "echo \"Terminal AI installed! Run 'ai' to try it out.\""
+    "postinstall": "echo \"Terminal AI installed! Run 'ai' to try it out.\"",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -56,6 +57,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "mock-fs": "^5.2.0",
     "ts-jest": "^29.1.1",
