--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.4.0",
   "main": "./dist/cli.js",
   "bin": {
-    "ai": "./dist/cli.js"
+    "ai": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
