feat(chat): basic code intent (#19)
* feat(chat): basic code intent

Also adds:

fix(chat): strip markdown formatting on copy/save action

* fix(chat): correct tests for formatting

* fix(chat): fix subtle whitespace issues in response prompt

* fix(build): disable legacy node

* fix(chat): code output correct for non-TTY

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start:debug": "NODE_NO_WARNINGS=1 NODE_OPTIONS='--experimental-vm-modules' node --inspect-brk node_modules/.bin/ts-node ./src/cli.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --no-coverage",
-    "test:debug": "NODE_OPTIONS='--experimental-vm-modules' node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:watch": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-vm-modules jest --watch --no-coverage",
-    "test:cov": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-coverage",
+    "test:debug": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --inspect-brk node_modules/.bin/jest --runInBand --no-coverage",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --watch --no-coverage",
+    "test:cov": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --coverage",
     "tsc": "tsc",
     "relink": "npm run build && npm unlink ai && npm link ai",
     "postinstall": "echo \"Terminal AI installed! Run 'ai' to try it out.\"",
