fix(build): reduce bundle size - bundle only distributables (#30)
* fix(build): reduce bundle size - bundle only distributables

* fix(build): set appropriate coverage thresholds

* chore: cleanup clipboard access

Also move TODO

* fix(build): don't run `main` build on `build:` branches

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "postinstall": "echo \"Terminal AI installed! Run 'ai' to try it out.\"",
     "prepare": "husky"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/dwmkerr/terminal-ai.git"
