--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -39,6 +39,17 @@ jobs:
         npm install
         npm run build
 
+      # Ensure we can install and run.
+    - name: validate install
+      run: |
+        npm install -g .
+        mkdir some-random-folder
+        cd some-random-folder
+        echo "Checking installed version..."
+        ai --version || (echo "ai command failed" && exit 1)
+        echo "Running 'ai config'..."
+        ai config || (echo "ai config command failed" && exit 1)
+
     # Upload coverage.
     - name: Upload Coverage
       uses: codecov/codecov-action@v5
