--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,17 @@ jobs:
           npm install
           npm run build
 
+      # Ensure we can install and run.
+      - name: validate install
+        run: |
+          npm install -g .
+          mkdir some-random-folder
+          cd some-random-folder
+          echo "Checking installed version..."
+          ai --version || (echo "ai command failed" && exit 1)
+          echo "Running 'ai config'..."
+          ai config || (echo "ai config command failed" && exit 1)
+
       # Upload the artifacts folder.
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
