--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,9 +1,10 @@
-name: main
+name: CI/CD
 
 on:
   push:
     branches:
       - main
+  pull_request:
 
 # Release Please needs permisisons to write commits and open PRs.
 permissions:
@@ -18,7 +19,8 @@ env:
   NODE_LTS_VERSION: 22.x
 
 jobs:
-  validate-main:
+  validate:
+    name: Validate
 
     runs-on: ubuntu-20.04
 
@@ -41,21 +43,23 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
 
-      # Lint and test.
+      # Install dependencies.
       - name: install
         run: npm install
+
+      # Lint the code.
       - name: lint
         run: npm run lint
+
+      # Build TypeScript.
+      - name: build
+        run: npm run build
+
+      # Run all tests, including coverage.
       - name: test
         run: npm run test:cov
 
-      # Ensure we can build.
-      - name: test build
-        run: |
-          npm install
-          npm run build
-
-      # Ensure we can install and run.
+      # Validate that we can install wiht 'npm install' and then run 'ai'.
       - name: validate install
         run: |
           npm install -g .
@@ -78,9 +82,11 @@ jobs:
         if: ${{ matrix.node-version == env.NODE_LTS_VERSION }}
 
   upload-coverage:
+    name: Upload Coverage
+
     # The 'upload coverage' job will only run if successfully complete the
-    # 'validate-main' job.
-    needs: validate-main
+    # 'validate' job.
+    needs: validate
 
     runs-on: ubuntu-20.04
 
@@ -106,10 +112,12 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   release-please:
+    name: Release PR/Deploy
+
     # The 'release please' job will only run if successfully complete the
     # 'validate-main' job. The deployment steps only occur if this is a release
     # merge.
-    needs: validate-main
+    needs: validate
 
     runs-on: ubuntu-20.04
 
@@ -124,6 +132,7 @@ jobs:
       
       - name: Checkout
         uses: actions/checkout@v3
+        if: ${{ steps.release.outputs.release_created }}
 
       # Setup the right version of Node.js.
       - name: Setup Node ${{ matrix.node-version }}
@@ -131,12 +140,14 @@ jobs:
         with:
           node-version: ${{ env.NODE_LTS_VERSION }}
           registry-url: 'https://registry.npmjs.org'
+        if: ${{ steps.release.outputs.release_created }}
 
       # Build the distributable code.
       - name: Build Distributable
         run: |
           npm install
           npm run build
+        if: ${{ steps.release.outputs.release_created }}
 
       # Publish the module to NPM.
       - name: Publish to NPM
