feat(usage): experimental 'usage' command (debug only)
Started scaffolding the 'usage' command. However it requires additional
permissions so there will be work to educate the user / caller on how to
set these up. But worth having to play around with for now.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@inquirer/prompts": "^7.3.1",
     "@types/js-yaml": "^4.0.9",
+    "axios": "^1.8.1",
     "clipboardy": "^4.0.0",
     "colors": "^1.4.0",
     "commander": "^11.1.0",
