feat: advanced model selection (#61)
* feat(config): allow free entry of 'model'

The config file can have any OpenAI model specified. The `ai check`
command will make a best-effort attempt to validate the model by using
it against a chat completion API.

* feat: model selection action

Model can also be set to any value, can be verified, and uses and
external repo to check for models which are confirmed to be valid

* OpenAI Authentication Error - try 'ai check' to validate API key

* fix: typos

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/dwmkerr/terminal-ai#readme",
   "dependencies": {
+    "@dwmkerr/ai-providers-and-models": "^0.1.6",
     "@dwmkerr/inquirer-advanced-input-prompt": "^0.1.0",
     "@inquirer/prompts": "^7.3.1",
     "@types/js-yaml": "^4.0.9",
