feat(experimental): optional langfuse integration

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "commander": "^11.1.0",
     "debug": "^4.3.4",
     "js-yaml": "^4.1.0",
+    "langfuse": "^3.36.0",
     "marked": "^15.0.6",
     "marked-terminal": "^7.3.0",
     "open": "^9.1.0",
