--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -63,7 +63,7 @@ jobs:
 
       # Validate that we can install wiht 'npm install' and then run 'ai'.
       - name: validate install
-        run: ./scripts/test-install.sh
+        run: ./tests/test-install.sh
         env:
           TESTING_AI_API_KEY: ${{ secrets.TESTING_AI_API_KEY }}
 
@@ -77,6 +77,7 @@ jobs:
         # Only upload artifacts for the build on the LTS version (we don't
         # need artifacts per node version).
         if: ${{ matrix.node-version == env.NODE_LTS_VERSION }}
+
 
   upload-coverage:
     name: Upload Coverage
@@ -108,14 +109,43 @@ jobs:
           directory: ./artifacts/coverage
           token: ${{ secrets.CODECOV_TOKEN }}
 
+  test-e2e:
+    name: E2E Tests
+    needs: validate
+    runs-on: ubuntu-24.04
+
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Setup the right version of Node.js.
+      - name: Setup Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_LTS_VERSION }}
+          registry-url: 'https://registry.npmjs.org'
+
+      # Install dependencies, build, install.
+      - name: install
+        run: |
+          npm install
+          npm run build
+          npm install -g .
+
+      # Validate that we can install wiht 'npm install' and then run 'ai'.
+      - name: test-e2e
+        run: make test-e2e
+        env:
+          TESTING_AI_API_KEY: ${{ secrets.TESTING_AI_API_KEY }}
+
   release-please:
     name: Release PR/Deploy
     runs-on: ubuntu-24.04
 
     # The 'release please' job will only run if successfully complete the
-    # 'validate-main' job. The deployment steps only occur if this is a release
+    # 'e2e tests' job. The deployment steps only occur if this is a release
     # merge.
-    needs: validate
+    needs: test-e2e
 
     steps:
       - name: Release Please
