--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "colors": "^1.4.0",
     "commander": "^11.1.0",
     "debug": "^4.3.4",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "inquirer-file-selector": "^0.6.2",
     "isbinaryfile": "^5.0.4",
     "js-yaml": "^4.1.0",
@@ -56,14 +58,15 @@
     "mime-types": "^3.0.1",
     "open": "^9.1.0",
     "openai": "^4.83.0",
-    "ora": "^8.2.0"
+    "ora": "^8.2.0",
+    "undici": "^5.26.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.14",
     "@types/mime-types": "^2.1.4",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.19.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^8.0.0",
